--- a/src/app/send/send.component.html
+++ b/src/app/send/send.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="main_div">
-        <div class="card-header ex1 example" style=" height:50px; background-color: rgb(119, 177, 252); border-radius: 10px;" > <img src="../../assets/att.png" style="width:25px; padding-top:0px;"  alt=""> <b style="font-family: sans-serif;">&nbsp;&nbsp;AT&T Assistant</b>
+        <div class="card-header ex1 example" style=" height:50px; background-color: rgb(119, 177, 252); border-radius: 10px;" > <img src="../../assets/DeepakMandal.jpg" style="width:25px; padding-top:0px;"  alt=""> <b style="font-family: sans-serif;">&nbsp;&nbsp;Ask Deepak</b>
              <span>&emsp;&nbsp;<i id="min" class="fa fa-minus " (click)="minimize()"></i></span>
             <i id="max"  class="fa fa-window-maximize" (click)="maximize()"></i>
         </div>
